<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    android:id="@+id/activity_confirmar_datos"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_layout_form"
    tools:context="com.solrom.edgar.appdecontactos.confirmar_datos">

    <!-- formato de confirmación de datos-->

    <TextView
        android:id="@+id/confirmacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmar"
        android:textAlignment="center"
        android:paddingTop="@dimen/cinco_dp"
        android:paddingBottom="@dimen/cinco_dp"
        android:textSize="@dimen/font_size_confirmar" />
    
    <TextView
        android:id="@+id/tvnombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contacto_nombre"
        android:padding="@dimen/cinco_dp"
        />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/cinco_dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contacto_fecha"
            android:text="@string/contacto_fecha"/>
        
        <TextView
            android:id="@+id/tvfecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_fecha"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tvtelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/cinco_dp"
        android:text="@string/contacto_tel"/>

    <TextView
        android:id="@+id/tvemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/cinco_dp"
        android:text="@string/contacto_email"/>

    <TextView
        android:id="@+id/tvdescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/cinco_dp"
        android:text="@string/contacto_descripcion"/>

    <!-- botón para modificar datos de contacto-->

    <Button
        android:id="@+id/editardatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/boton_confirmar"
        android:theme="@style/MiBotonRaised"
        android:padding="@dimen/cinco_dp"
        android:onClick="IrAConfirmarActivity"
        />
<!--
    <TextView
        android:id="@+id/confirmacion"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/confirmar"
        android:gravity="center_horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="40dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />-->

    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/contacto_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacto_nombre"/>

        <TextView
            android:id="@+id/tvnombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/edit_nombre"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/contacto_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacto_fecha"/>

        <TextView
            android:id="@+id/tvfecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/edit_fecha"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/contacto_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacto_tel"/>

        <TextView
            android:id="@+id/tvtelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/edit_telefono"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/contacto_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacto_email"/>

        <TextView
            android:id="@+id/tvemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/edit_email"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/contacto_descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacto_descripcion"/>

        <TextView
            android:id="@+id/tvdescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/edit_descripcion"/>

    </LinearLayout>

    <Button
        android:id="@+id/editardatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/boton_confirmar"
        android:theme="@style/MiBotonRaised"
        android:onClick="editar"
        />
        -->


</android.support.v7.widget.LinearLayoutCompat>
